backup/short/deployment-short-api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-short-api
spec:
  replicas: 1
  selector:
    matchLabels:
      components: short-api
  template:
    metadata:
      name: short-api
      labels:
        components: short-api
    spec:
      containers:
        - name: short-api
          image: antonlarichev/short-api:v1.0
          ports:
            - containerPort: 3000
          resources:
            limits:
              memory: "500Mi" 
              cpu: "200m"
