backup/short/ingress-short.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-short
  annotations:
    nginx.ingress.kubernetes.io/add-base-url: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: short.test
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: service-short-app
            port: 
              number: 80
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: service-short-api
            port: 
              number: 3000
